# openapi.yaml
@@ -650,6 +650,33 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/Car'
+  /cars/makers:
+    get:
+      summary: Your GET endpoint
+      tags: []
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: string
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+      operationId: get-makers
+    parameters: []
 components:
   schemas:
     Car:
